# VeriTrace

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/: proposal.md
src/veritrace/parsers/: evtx.py  prefetch.py  registry.py
