[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veritrace"
version = "0.1.0"
description = "Evidence Integrity Assessment Framework for Detecting Anti-Forensic Activity in Windows Systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Dielle De Noon"}
]

keywords = [
    "digital-forensics",
    "dfir",
    "incident-response",
    "anti-forensics",
    "windows-forensics",
    "cybersecurity"
]

dependencies = [
    "pandas>=2.2.0",
    "python-registry>=1.3.1",
    "python-evtx>=0.8.1",
    "jinja2>=3.1.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0"
]

[project.urls]
Homepage = "https://github.com/Gear-I"
Repository = "https://github.com/Gear-I/VeriTrace"

[tool.pytest.ini_options]
testpaths = ["tests"]